--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,76 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+  padding: 30px;
+  background-color: #E6E6E9;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
+  margin: 8px;
+}
+
+::ng-deep .custom-frame .mat-checkbox-background, .mat-checkbox-frame {
+    border-radius: 70% !important;
+  }
+  
+  .example-form .mat-form-field-appearance-fill .mat-form-field-flex{
+    background-color: white !important;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #e6e6e9;
+}
+
+.example-form .mat-form-field-infix{
+width: 100px !important;
+}
+
+
+::ng-deep .mat-select-content{
+
+  background-color: white !important;
+  
+}
+
+/*.dropdownBox  .mat-form-field-infix {
+  background-color: white !important;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e6e6e9;
+}
+.dropdownBox .mat-form-field-appearance-fill .mat-form-field-flex {
+  background-color: white !important;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e6e6e9;
+}*/
+ .mat-form-field-appearance-fill .mat-form-field-flex{
+  background-color: white !important;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e6e6e9;
+}
+
+.dropdownBox .mat-select-panel {
+  background-color: white !important;
+}
+
+.dropdownBox .mat-form-field-infix {
+  background-color: white !important;
+}
+
+.dropdownBox .mat-select {
+  background-color: white !important;
+}
+
+
+.mat-select-panel mat-option.mat-option {
+  height: unset;
+}
+
+.mat-option-text.mat-option-text {
+  white-space: normal;
+}
